added content to Krishna cow

--- a/araw.html
+++ b/araw.html
@@ -87,7 +87,7 @@
 
                 <div class="project-grid two-column">
                     <div class="project-card">
-                        <img src="img/jpg/araw-inkdrop.jpg" alt="GIF of the Araw Logo" width="1920" height="730" class="project-image">
+                        <img src="img/gif/araw-inkdrop.gif" alt="GIF of the Araw Logo" width="1920" height="730" class="project-image">
                         <div class="project-overlay">
                         </div>
                     </div>
