--- a/cinqueterre.html
+++ b/cinqueterre.html
@@ -111,7 +111,7 @@
 
             <div class="project-grid two-column">
                 <div class="project-card">
-                    <img src="img/webp/cinqueterre-typeface-colors.webp" alt="Cinque Terre Logo typefaces and color" width="648" height="648" class="project-image">
+                    <img src="img/png/cinqueterrre-type-color.png" alt="Cinque Terre Logo typefaces and color" width="648" height="648" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
