--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 
             <div class="works-grid two-column light">
                 <div class="works-card">
-                    <a href="#">
-                        <img src="img/webp/krishna-cow-logo-w-bg.webp" alt="krishna logo" width="1920" height="1800" class="works-image">
+                    <a href="krishnacow.html">
+                        <img src="img/webp/krishnacow-thumbs.webp" alt="krishna logo" width="1080" height="1080" class="works-image">
                     </a>
                 </div>
 
