--- a/krishnacow.html
+++ b/krishnacow.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="https://placehold.co/600x400" alt="placeholder" width="1920" height="1080" />
+                <img src="img/png/krishnacow-hero.png" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -60,11 +60,12 @@
 
                 <div class="three-fourths">
                     <div class="container-content">
-                        <h1>Cinque Terre</h1>
+                        <h1>Krishna Cow Sanctuary</h1>
                         <!-- <h5><em>A Destination Emblem</em></h5> -->
 
 
-                        <p>To create a memorable visual identity for the Krishna Cow Sanctuary, I began by thoroughly researching the organization—its values, mission, and overall identity. This helped me understand not just what they do, but why they do it. I also explored the cultural and spiritual significance of Krishna, who is revered in Hinduism as a divine protector of cows and a symbol of love, compassion, and harmony with nature.</p>
+                        <p>To create a memorable visual identity for the Krishna Cow Sanctuary, I began by thoroughly researching the organization—its values, mission, and overall identity. This helped me understand not just what they do, but why they do it. I also explored the cultural and spiritual significance of Krishna, who is revered in Hinduism as a divine protector of cows and a symbol of love, compassion, and harmony with nature.
+                        </p>
 
                         <p>I wanted to incorporate both the sanctuary&apos;s focus on cow care and the spiritual essence of Krishna. This led me to the idea of designing a logo featuring the head of a cow, with the nose shaped like a heart. The heart symbolizes love and compassion, reinforcing the sanctuary&apos;s message of gentle care and connection. It also subtly ties into the concept of <em>"cow cuddling,"</em> emphasizing the emotional bond between humans and animals.</p>
 
@@ -79,9 +80,22 @@
 
 
         <section>
+            <div class="project-grid two-column">
+                <div class="project-card">
+                    <img src="img/png/krishnacow-blacklogo.png" alt="Project 2" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+                <div class="project-card">
+                    <img src="img/png/krishnacow-coloredlogo.png" alt="Project 3" class="project-image">
+                    <div class="project-overlay">
+                    </div>
+                </div>
+
+            </div>
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 1" class="project-image">
+                    <img src="img/png/krishnacow-type-color.png" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -89,7 +103,7 @@
 
             <div class="project-grid">
                 <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 1" class="project-image">
+                    <img src="img/jpg/krishnacow-sketch.jpg" alt="Project 1" class="project-image">
                     <div class="project-overlay">
                     </div>
                 </div>
@@ -116,7 +130,7 @@
                     <ul class="_line hover-effect">
                         <li class="prev"><a href="restingmug.html">Previous Project</a></li>
                         <li><a href="index.html#project">View All Projects</a></li>
-                        <li class="next"><a href="boozi.html">Next Project</a></li>
+                        <li class="next"><a href="charlesandrayeames.html">Next Project</a></li>
                     </ul>
 
                 </div>
