validated html for all subpages

--- a/about.html
+++ b/about.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="https://use.typekit.net/dut3ivt.css">
 
     <!-- MAIN CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.4.4-rc1/css/foundation.css">
+
     <link href="css/style.css" rel="stylesheet" type="text/css">
 
 </head>
