--- a/araw.html
+++ b/araw.html
@@ -45,7 +45,7 @@
 
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/webp/araw-combined-sunscreen-hero.jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800" />
+                <img src="img/webp/araw-combined-sunscreen-hero.jpg" alt="Image of three of the Araw sunscreen for adults, kids & baby's, and the facestick" width="1600" height="800">
             </div>
         </section>
 
@@ -96,11 +96,6 @@
                         <div class="project-overlay">
                         </div>
                     </div>
-                    <!-- <div class="project-card">
-                        <img src="https://placehold.co/400x400" alt="Project 9" class="project-image">
-                        <div class="project-overlay">
-                        </div>
-                    </div> -->
                 </div>
 
                 <div class="project-grid two-column">
