--- a/krishnacow.html
+++ b/krishnacow.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/png/krishnacow-hero.png" alt="placeholder" width="1920" height="1080" />
+                <img src="img/webp/krishnacow-hero.webp" alt="placeholder" width="1920" height="1080" />
             </div>
         </section>
 
@@ -74,12 +74,8 @@
             </div>
         </div>
 
-        </section>
-
-
-
-
         <section>
+
             <div class="project-grid two-column">
                 <div class="project-card">
                     <img src="img/png/krishnacow-blacklogo.png" alt="Project 2" class="project-image">
@@ -91,8 +87,8 @@
                     <div class="project-overlay">
                     </div>
                 </div>
-
             </div>
+
             <div class="project-grid">
                 <div class="project-card">
                     <img src="img/png/krishnacow-type-color.png" alt="Project 1" class="project-image">
@@ -110,6 +106,7 @@
             </div>
 
             <div class="project-grid two-column">
+
                 <div class="project-card">
                     <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
                     <div class="project-overlay">
@@ -123,6 +120,7 @@
 
             </div>
         </section>
+
         <section>
             <div class="container wide">
                 <div class="view-other-projects">
