moved section inside a div

--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                                     <div class="res-date">August 2023&ndash;Present</div>
                                 </li>
                                 <li>
-                                    <div class="res-sub"><strong>Hawai&#699i Community College</strong></div>
+                                    <div class="res-sub"><strong>Hawai&#699; Community College</strong></div>
                                     <div class="res-degree"><em>A.A Liberal Arts</em></div>
                                     <div class="res-date">August 2019&ndash;May 2021</div>
                                 </li>
@@ -124,7 +124,6 @@
                                 <li><strong>Mauna Loa Visitor's Center</strong> <br> <em>Sales Associate</em> <br> <span class="res-date">June 2022&ndash;April 2023</span></li>
                             </ul>
 
-                            </ul>
                         </div>
                     </div>
 
