--- a/boozi.html
+++ b/boozi.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/webp/boozi-cans-hero.webp" alt="3 cans of Boozi Hard Seltzer" width="4885" height="2000" />
+                <img src="img/webp/boozi-cans-hero.webp" alt="3 cans of Boozi Hard Seltzer" width="4885" height="2000">
             </div>
         </section>
 
@@ -73,90 +73,93 @@
                     </div>
                 </div>
             </div>
+
+            <section>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/gif/boozi-fruits-2.gif" alt="GIF of before and after the fruits are colored" width="1318" height="713" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid three-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="img/png/boozi-type.png" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/png/boozi-B-65.png" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+                <div class="project-grid three-column">
+                    <div class="project-card">
+                        <img src="img/webp/boozi-mango.webp" alt="Image of Mango flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/webp/boozi-lilikoi.webp" alt="Image of Lilikoi flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/webp/boozi-lychee.webp" alt="Image of Lychee flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/webp/boozi-poolside.webp" alt="Project 4" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+
+            </section>
+
         </div>
 
 
-        <section>
 
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="img/gif/boozi-fruits-2.gif" alt="GIF of before and after the fruits are colored" width="1318" height="713" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid three-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 7" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 8" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 9" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid two-column">
-                <div class="project-card">
-                    <img src="img/png/boozi-type.png" alt="Boozi typeface" width="648" height="648" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="img/png/boozi-B-65.png" alt="Boozi typeface" width="648" height="648" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-            <div class="project-grid three-column">
-                <div class="project-card">
-                    <img src="img/webp/boozi-mango.webp" alt="Image of Mango flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="img/webp/boozi-lilikoi.webp" alt="Image of Lilikoi flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="img/webp/boozi-lychee.webp" alt="Image of Lychee flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="img/webp/boozi-poolside.webp" alt="Project 4" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid two-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-
-        </section>
 
         <section>
             <div class="container wide">
