--- a/krishnacow.html
+++ b/krishnacow.html
@@ -44,12 +44,13 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="img/webp/krishnacow-hero.webp" alt="placeholder" width="1920" height="1080" />
+                <img src="img/webp/krishnacow-hero.webp" alt="Image of cows in the meadow and Krishna Cow logo" width="1920" height="1080">
             </div>
         </section>
 
         <div class="container wide">
             <div class="row intro">
+
                 <div class="one-fourth">
                     <ul class="project-meta-list">
                         <li><strong class="caps">Client:</strong> Student Project</li>
@@ -61,8 +62,6 @@
                 <div class="three-fourths">
                     <div class="container-content">
                         <h1>Krishna Cow Sanctuary</h1>
-                        <!-- <h5><em>A Destination Emblem</em></h5> -->
-
 
                         <p>To create a memorable visual identity for the Krishna Cow Sanctuary, I began by thoroughly researching the organization—its values, mission, and overall identity. This helped me understand not just what they do, but why they do it. I also explored the cultural and spiritual significance of Krishna, who is revered in Hinduism as a divine protector of cows and a symbol of love, compassion, and harmony with nature.
                         </p>
@@ -72,54 +71,56 @@
                     </div>
                 </div>
             </div>
+            <section>
+
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="img/png/krishnacow-blacklogo.png" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="img/png/krishnacow-coloredlogo.png" alt="Project 3" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/krishnacow-type-color.png" alt="Project 1" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/jpg/krishnacow-sketch.jpg" alt="Project 1" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid two-column">
+
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 3" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+
+                </div>
+
+            </section>
+
         </div>
 
-        <section>
-
-            <div class="project-grid two-column">
-                <div class="project-card">
-                    <img src="img/png/krishnacow-blacklogo.png" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="img/png/krishnacow-coloredlogo.png" alt="Project 3" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="img/png/krishnacow-type-color.png" alt="Project 1" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="img/jpg/krishnacow-sketch.jpg" alt="Project 1" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid two-column">
-
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 3" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-
-            </div>
-        </section>
 
         <section>
             <div class="container wide">
@@ -134,6 +135,7 @@
                 </div>
             </div>
         </section>
+
     </main>
 
 
