--- a/charlesandrayeames.html
+++ b/charlesandrayeames.html
@@ -44,7 +44,7 @@
 
         <section class="project-hero">
             <div class="hero-image-wrapper align-bottom">
-                <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080" />
+                <img src="img/webp/eames-chair.webp" alt="placeholder" width="1920" height="1080">
             </div>
         </section>
 
@@ -124,6 +124,8 @@
                     </div>
                 </div>
             </section>
+        </div>
+
     </main>
 
 
