--- a/restingmug.html
+++ b/restingmug.html
@@ -44,7 +44,7 @@
     <main>
         <section class="project-hero">
             <div class="hero-image-wrapper">
-                <img src="https://placehold.co/600x400" alt="Hero Image for the Resting Mug" width="" height="" />
+                <img src="https://placehold.co/600x400" alt="Hero Image for the Resting Mug" width="" height="">
             </div>
         </section>
 
@@ -67,94 +67,95 @@
                     </div>
                 </div>
             </div>
+
+            <section>
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/png/restingmug-colors.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="img/jpg/restingmug-socialmedia.jpg" alt="Social Media Post for the Resting Mug" width="1920" height="1080" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+                <div class="project-grid three-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Image of Mango flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Image of Lilikoi flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Image of Lychee flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-grid two-column">
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                    <div class="project-card">
+                        <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
+                        <div class="project-overlay">
+                        </div>
+                    </div>
+                </div>
+
+
+            </section>
+
         </div>
 
-
-        <section>
-            <div class="project-grid two-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="img/png/restingmug-colors.png" alt="Resing Mug color Palette" width="1920" height="1065" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="img/jpg/restingmug-socialmedia.jpg" alt="Social Media Post for the Resting Mug" width="1920" height="1080" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="project-grid two-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Boozi typeface" width="648" height="648" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-            <div class="project-grid three-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Image of Mango flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Image of Lilikoi flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Image of Lychee flavored Boozi Hard seltzer" width="1080" height="2000" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 4" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-            <div class="project-grid two-column">
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-                <div class="project-card">
-                    <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
-                    <div class="project-overlay">
-                    </div>
-                </div>
-            </div>
-
-
-        </section>
 
         <section>
             <div class="container wide">
