--- a/krishnacow.html
+++ b/krishnacow.html
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div class="project-grid two-column">
+                <!-- <div class="project-grid two-column">
 
                     <div class="project-card">
                         <img src="https://placehold.co/600x400" alt="Project 2" class="project-image">
@@ -115,7 +115,7 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
             </section>
 
